# spec-case

./: AGENTS.md  README.md  README.zh-CN.md
docs/: concepts.md  glossary.md
go/: extract.go  extract_test.go  go.mod  main.go  main_test.go
languages/: go.md  python.md
python/: .gitignore  README.md  pyproject.toml
python/spec_case/: __init__.py  markers.py  specgen.py
python/tests/: test_specgen.py
schemas/: case.schema.json  spec-json.schema.json
specs/symbol-id/: spec.md
specs/unit-id/: spec.md
