[project]
name = "spec-case"
version = "0.1.0"
description = "In-code spec/case/rule/link markers + specgen extractor that compiles them into spec.json (consumed by ccr)."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[project.scripts]
specgen = "spec_case.specgen:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_case"]
